--- a/source/package.json
+++ b/source/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev-test": "DEBUG=app* nodemon test/index.js",
+    "dev-test": "DEBUG=app:test* TEST_MODE=1 nodemon test/index.js",
     "dev": "DEBUG_LEVEL=5 DEBUG=app* nodemon -L --inspect=5858 index.js",
     "lint": "eslint ."
   },
