--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "node-starter",
-  "version": "0.0.1",
+  "version": "0.1.0",
   "description": "Node starter project",
   "main": "index.js",
   "scripts": {
@@ -17,6 +17,7 @@
     "bcrypt-nodejs": "0.0.3",
     "bluebird": "^3.5.0",
     "body-parser": "^1.17.2",
+    "cors": "^2.8.4",
     "debug": "^2.6.8",
     "express": "^4.15.3",
     "express-deliver": "^1.0.0-rc-5",
