--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
   "main": "index.js",
   "scripts": {
     "init": "./config/db.sh",
-    "test": "TEST_MODE=1 DEBUG=app* node test/index.js",
+    "test": "TEST_MODE=1 DEBUG=app* node test/index.js; npm run lint",
     "dev-test": "TEST_MODE=1 DEBUG=app* nodemon test/index.js",
     "dev": "DEBUG=app* nodemon index.js",
-    "lint": "eslint ."
+    "lint": "eslint --ignore-path .gitignore src/"
   },
   "author": "",
   "license": "ISC",
@@ -22,17 +22,21 @@
     "express-deliver": "^1.0.0",
     "helmet": "^3.6.1",
     "jsonwebtoken": "^8.3.0",
-    "morgan": "^1.8.2",
     "multer": "^1.3.0",
     "pg": "^7.4.3",
     "pg-hstore": "^2.3.2",
-    "q": "^1.5.0",
     "redis": "^2.8.0",
     "revalidator": "^0.3.1",
     "sequelize": "^4.38.0"
   },
   "devDependencies": {
     "chai": "^4.1.2",
+    "eslint": "^5.4.0",
+    "eslint-config-standard": "^11.0.0",
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-node": "^7.0.1",
+    "eslint-plugin-promise": "^4.0.0",
+    "eslint-plugin-standard": "^3.1.0",
     "faker": "^4.1.0",
     "mocha": "^5.2.0",
     "nodemon": "^1.18.3",
