--- a/package.json
+++ b/package.json
@@ -1,11 +1,14 @@
 {
-  "name": "iai",
+  "name": "node-starter",
   "version": "0.0.1",
-  "description": "Image AI",
+  "description": "node starter",
   "main": "index.js",
   "scripts": {
-    "init": "./config/db.sh",
-    "test": "TEST_MODE=1 DEBUG=app* node test/index.js; npm run lint",
+    "init": "PGUSER=postgres ./config/db.sh starter",
+    "init-test": "PGUSER=postgres ./config/db.sh starter_test",
+    "cleandb": "PGUSER=postgres ./config/cleandb.sh starter",
+    "cleandb-test": "PGUSER=postgres ./config/cleandb.sh starter_test",
+    "test": "npm run init-test; TEST_MODE=1 DEBUG=app* node test/index.js; npm run lint; npm run cleandb-test;",
     "dev-test": "TEST_MODE=1 DEBUG=app* nodemon test/index.js",
     "dev": "DEBUG=app* nodemon index.js",
     "lint": "eslint --ignore-path .gitignore src/"
@@ -15,31 +18,31 @@
   "dependencies": {
     "bcrypt": "^3.0.3",
     "bluebird": "^3.5.2",
-    "body-parser": "^1.17.2",
+    "body-parser": "1.19.0",
     "cors": "^2.8.5",
     "debug": "^4.1.1",
-    "express": "^4.16.4",
+    "express": "^4.17.1",
     "express-deliver": "^1.0.0",
     "helmet": "^3.15.0",
     "jsonwebtoken": "^8.5.1",
     "multer": "^1.4.1",
-    "pg": "^7.4.3",
-    "pg-hstore": "^2.3.2",
+    "pg": "^7.11.0",
+    "pg-hstore": "^2.3.3",
     "redis": "^2.8.0",
     "revalidator": "^0.3.1",
-    "sequelize": "^5.3.0"
+    "sequelize": "5.8.12"
   },
   "devDependencies": {
     "chai": "^4.2.0",
     "eslint": "^5.16.0",
     "eslint-config-standard": "^12.0.0",
     "eslint-plugin-import": "^2.14.0",
-    "eslint-plugin-node": "^8.0.1",
-    "eslint-plugin-promise": "^4.0.1",
+    "eslint-plugin-node": "^9.1.0",
+    "eslint-plugin-promise": "^4.1.1",
     "eslint-plugin-standard": "^4.0.0",
     "faker": "^4.1.0",
-    "mocha": "^5.2.0",
+    "mocha": "^6.1.4",
     "nodemon": "^1.18.9",
-    "supertest": "^3.3.0"
+    "supertest": "^4.0.2"
   }
 }
